--- a/website/main/templates/registration/sign_up.html
+++ b/website/main/templates/registration/sign_up.html
@@ -1,5 +1,5 @@
 {% extends "main/base.html" %}
-{% block title %}Sign Up{% endblock %}
+{% block title %}Sign Up. Create an account here. {% endblock %}
 {% load crispy_forms_tags %}
 {% block content%}
 <form method="post">
